@@ -396,7 +396,7 @@ const typedata *get_typedata_by_name(const char *name) {
  * @param size
  * buffer size.
  */
-void describe_resistance(const object *op, int newline, char *buf, int size) {
+void describe_resistance(const object *op, int newline, char *buf, size_t size) {
     char *p;
     int tmpvar;
 
@@ -421,7 +421,7 @@ void describe_resistance(const object *op, int newline, char *buf, int size) {
  * @param size
  * buffer size.
  */
-void query_weight(const object *op, char *buf, int size) {
+void query_weight(const object *op, char *buf, size_t size) {
     sint32 i = (op->nrof ? op->nrof : 1)*op->weight+op->carrying;
 
     if (op->weight < 0)
@@ -441,7 +441,7 @@ void query_weight(const object *op, char *buf, int size) {
  * @param size
  * size of the buffer.
  */
-void get_levelnumber(int i, char *buf, int size) {
+void get_levelnumber(int i, char *buf, size_t size) {
     if (i > 99 || i < 0) {
         snprintf(buf, size, "%d.", i);
         return;
@@ -480,8 +480,9 @@ void get_levelnumber(int i, char *buf, int size) {
  * @todo
  * Use safe string functions. Check if really ring/amulet?
  */
-static void ring_desc(const object *op, char *buf, int size) {
-    int attr, val, len;
+static void ring_desc(const object *op, char *buf, size_t size) {
+    int attr, val;
+    size_t len;
 
     buf[0] = 0;
 
@@ -547,8 +548,8 @@ static void ring_desc(const object *op, char *buf, int size) {
  * @param size
  * buffer length.
  */
-void query_short_name(const object *op, char *buf, int size) {
-    int len = 0;
+void query_short_name(const object *op, char *buf, size_t size) {
+    size_t len = 0;
 
     if (op->name == NULL) {
         snprintf(buf, size, "(null)");
@@ -624,8 +625,8 @@ void query_short_name(const object *op, char *buf, int size) {
  * @param size
  * size of buffer.
  */
-void query_name(const object *op, char *buf, int size) {
-    int len = 0;
+void query_name(const object *op, char *buf, size_t size) {
+    size_t len = 0;
 #ifdef NEW_MATERIAL_CODE
     materialtype_t *mt;
 #endif
@@ -728,8 +729,8 @@ void query_name(const object *op, char *buf, int size) {
  * @param size
  * buffer's length
  */
-void query_base_name(const object *op, int plural, char *buf, int size) {
-    int len;
+void query_base_name(const object *op, int plural, char *buf, size_t size) {
+    size_t len;
 #ifdef NEW_MATERIAL_CODE
     materialtype_t *mt;
 #endif
@@ -836,9 +837,9 @@ void query_base_name(const object *op, int plural, char *buf, int size) {
  * Rename to describe_living (or equivalent) since called for player too.
  * Use safe string functions. Fix weird sustenance logic.
  */
-void describe_monster(const object *op, char *retbuf, int size) {
+void describe_monster(const object *op, char *retbuf, size_t size) {
     int i;
-    int len;
+    size_t len;
 
     retbuf[0] = '\0';
 
@@ -1014,7 +1015,7 @@ void describe_monster(const object *op, char *retbuf, int size) {
  * Check whether owner is really needed. Use safe string functions.
  * Check spurious food logic.
  */
-void describe_item(const object *op, const object *owner, char *retbuf, int size) {
+void describe_item(const object *op, const object *owner, char *retbuf, size_t size) {
     int identified, i;
 
     retbuf[0] = '\0';
@@ -1207,7 +1208,7 @@ void describe_item(const object *op, const object *owner, char *retbuf, int size
       */
     if (identified) {
         int more_info = 0;
-        int len;
+        size_t len;
 
         switch (op->type) {
         case ROD:  /* These use stats.sp for spell selection and stats.food */
